Feature/communication gateways
