# web-portal-bff/src/api/schedule/model/Schedules.ts
@@ -1,0 +1,9 @@
+export interface ScheduleQueryParams {
+  userId?: string;
+  gatewayId?: string;
+}
+
+export interface SchedulePageQueryParams extends ScheduleQueryParams {
+  page: string;
+  pageSize: string;
+}
